Find privileges based on private, not public channels